fix: small CSS fix for animation on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,8 @@ h1 {
 
 .site-container {
     height: 100%;
+    overflow: hidden;
+    position: relative;
 }
 
 .flex-container {
